Input Style Changed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Phudu:wght@900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cinzel:wght@600&family=Phudu:wght@900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="navBar">
@@ -17,7 +23,11 @@
           id="fbLogo"
           src="https://i.pinimg.com/originals/ce/d6/6e/ced66ecfc53814d71f8774789b55cc76.png"
         />
-        <input placeholder="Search" type="search" />
+        <input
+          style="padding-left: 10px; width: 200px; height: 40px"
+          placeholder=" Search Facebook"
+          type="search"
+        />
       </div>
       <div id="socialDiv">
         <img
