--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgHUN1cdyt1GCSzwMVxIVXCXNY13oEE_3HAw&usqp=CAU"
               />
               <input
+                style="height: 40px; padding-left: 10px"
                 placeholder="Write Something!"
                 id="commentBox"
                 type="search"
